# UKPlanning

./: .dockerignore  .env.example  .gitignore  Dockerfile  REMAINING_COUNCILS_PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml  run_server.py
docs/superpowers/plans/: 2026-03-26-plan1-core-infrastructure.md  2026-03-26-plan2-idox-scraper.md  2026-03-26-plan3-scheduler.md  (+3 more)
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: audit_councils.py  disable_dead_urls.py  discover_all_councils.py  fetch_planit_urls.py  find_migrated_councils.py  find_new_urls.py  find_real_idox_urls.py  google_council_urls.py  govuk_url_finder.py  migrate_configs.py  smart_url_finder.py  test_all_councils.py  test_all_councils_fast.py  test_live_scrape.py  verify_and_apply.py  verify_urls.py  websearch_councils.py
src/core/: browser.py  captcha.py  config.py  database.py  models.py  parser.py  scraper.py
src/dashboard/: app.py  dependencies.py
src/scheduler/: main.py  orchestrator.py  registry.py  worker.py
tests/: conftest.py  test_browser.py  test_config.py  test_dashboard.py  test_idox.py  test_idox_variants.py  test_integration.py  test_migration.py  test_models.py  test_orchestrator.py  test_parser.py  test_planning_explorer.py  test_registry.py  test_scheduler_main.py  test_scraper.py  test_swiftlg.py  test_worker.py
tests/fixtures/: idox_detail_dates.html  idox_detail_info.html  idox_detail_summary.html  idox_search_results.html  pe_dates.html  pe_detail.html  pe_search_results.html  swiftlg_detail.html  swiftlg_search_results.html
(+439 files in other folders)
